feat(layout): complete main page structure

--- a/index.html
+++ b/index.html
@@ -15,46 +15,158 @@
           <li><a href="#">Inicio</a></li>
           <li><a href="#cuentas">Abrir cuenta</a></li>
           <li><a href="#">Iniciar sesión</a></li>
-          <li><a href="#">Ver productos</a></li>
+          <li><a href="#productos">Ver productos</a></li>
         </ul>
       </nav>
     </div>
   </header>
 
   <div>
-    <h1>Productos Financieros</h1>
+    <h1 id="productos">Productos Financieros</h1>
 
     <div id="cuentas">
-      <div> 
-      <h2>Cuenta de ahorros</h2>
-      <p class="descripcion">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error velit magni id dolor ab iure magnam voluptatibus. Aperiam nisi, qui facilis numquam corporis quae dolores nesciunt quas. Et, repellat nostrum.</p>
-      <p class="beneficios">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error velit magni id dolor ab iure magnam voluptatibus. Aperiam nisi, qui facilis numquam corporis quae dolores nesciunt quas. Et, repellat nostrum.</p>
-      <p class="requisitos">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error velit magni id dolor ab iure magnam voluptatibus. Aperiam nisi, qui facilis numquam corporis quae dolores nesciunt quas. Et, repellat nostrum.</p>
-      <button>Abrir Cuenta</button>
+      <div class="cuenta">
+        <h2>Cuenta de ahorros</h2>
+        <p class="descripcion">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error velit magni id dolor ab iure magnam voluptatibus. Aperiam nisi, qui facilis numquam corporis quae dolores nesciunt quas. Et, repellat nostrum.</p>
+        <p class="beneficios">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error velit magni id dolor ab iure magnam voluptatibus. Aperiam nisi, qui facilis numquam corporis quae dolores nesciunt quas. Et, repellat nostrum.</p>
+        <p class="requisitos">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error velit magni id dolor ab iure magnam voluptatibus. Aperiam nisi, qui facilis numquam corporis quae dolores nesciunt quas. Et, repellat nostrum.</p>
+        <button><a href="#">Abrir Cuenta</a></button>
+      </div>
 
-      <h2>Cuenta corriente</h2>
-      <p class="descripcion">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error velit magni id dolor ab iure magnam voluptatibus. Aperiam nisi, qui facilis numquam corporis quae dolores nesciunt quas. Et, repellat nostrum.</p>
-      <p class="beneficios">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error velit magni id dolor ab iure magnam voluptatibus. Aperiam nisi, qui facilis numquam corporis quae dolores nesciunt quas. Et, repellat nostrum.</p>
-      <p class="requisitos">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error velit magni id dolor ab iure magnam voluptatibus. Aperiam nisi, qui facilis numquam corporis quae dolores nesciunt quas. Et, repellat nostrum.</p>
-      <button>Abrir Cuenta</button>
+      <div class="cuenta">
+        <h2>Cuenta corriente</h2>
+        <p class="descripcion">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error velit magni id dolor ab iure magnam voluptatibus. Aperiam nisi, qui facilis numquam corporis quae dolores nesciunt quas. Et, repellat nostrum.</p>
+        <p class="beneficios">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error velit magni id dolor ab iure magnam voluptatibus. Aperiam nisi, qui facilis numquam corporis quae dolores nesciunt quas. Et, repellat nostrum.</p>
+        <p class="requisitos">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error velit magni id dolor ab iure magnam voluptatibus. Aperiam nisi, qui facilis numquam corporis quae dolores nesciunt quas. Et, repellat nostrum.</p>
+        <button><a href="#">Abrir Cuenta</a></button>
+      </div>
 
-      <h2>Cuenta digital</h2>
-      <p class="descripcion">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error velit magni id dolor ab iure magnam voluptatibus. Aperiam nisi, qui facilis numquam corporis quae dolores nesciunt quas. Et, repellat nostrum.</p>
-      <p class="beneficios">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error velit magni id dolor ab iure magnam voluptatibus. Aperiam nisi, qui facilis numquam corporis quae dolores nesciunt quas. Et, repellat nostrum.</p>
-      <p class="requisitos">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error velit magni id dolor ab iure magnam voluptatibus. Aperiam nisi, qui facilis numquam corporis quae dolores nesciunt quas. Et, repellat nostrum.</p>
-      <button>Abrir Cuenta</button>
+      <div class="cuenta">
+        <h2>Cuenta digital</h2>
+        <p class="descripcion">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error velit magni id dolor ab iure magnam voluptatibus. Aperiam nisi, qui facilis numquam corporis quae dolores nesciunt quas. Et, repellat nostrum.</p>
+        <p class="beneficios">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error velit magni id dolor ab iure magnam voluptatibus. Aperiam nisi, qui facilis numquam corporis quae dolores nesciunt quas. Et, repellat nostrum.</p>
+        <p class="requisitos">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error velit magni id dolor ab iure magnam voluptatibus. Aperiam nisi, qui facilis numquam corporis quae dolores nesciunt quas. Et, repellat nostrum.</p>
+        <button>Abrir Cuenta</button>
+      </div>
+    </div>
+
+    <div id="tarjetas">
+      <h2>Nuestras Tarjetas</h2>
+
+      <div id="tarjetastipo">
+        <h3>Tarjeta Debito</h3>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellat omnis quod, amet aut fugit recusandae ab numquam provident. Ullam ducimus accusantium vel magni et tempore commodi sequi nisi, laudantium recusandae!</p>
+        <button id="botonTarjetas">Tarjetas Debito</button>
+      </div>
+      <div id="tarjetastipo">
+        <h3>Tarjeta Credito</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In, quaerat fugit illo cumque hic alias cum id asperiores nihil amet, facere fugiat quidem molestiae necessitatibus consectetur vero labore quos quod.</p>
+        <button id="botonTarjetas">Tarjetas Credito</button>
+      </div>
+    </div>
+
+    <div id="prestamos">
+      <h2>Créditos y Préstamos</h2>
+
+      <div class="creditos">
+        <h2>Crédito personal</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut blanditiis dolor ducimus dicta tempore perferendis incidunt tempora dolore neque excepturi!</p>
+      </div>
+
+      <div class="creditos">
+        <h2>Crédito hipotecario</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut blanditiis dolor ducimus dicta tempore perferendis incidunt tempora dolore neque excepturi!</p>
+      </div>
+
+      <div class="creditos">
+        <h2>Crédito vehicular</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut blanditiis dolor ducimus dicta tempore perferendis incidunt tempora dolore neque excepturi!</p>
+      </div>
+
+      <div class="creditos">
+        <h2>Crédito estudiantil</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut blanditiis dolor ducimus dicta tempore perferendis incidunt tempora dolore neque excepturi!</p>
+      </div>
+    </div>
+
+    <div id="inversiones">
+      <h2>Inversiones</h2>
+
+      <div class="tipoinversion">
+        <h3>CDT</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem officiis autem similique dolores, natus odit totam velit aut mollitia expedita!</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Expedita, veritatis?</p>
+        <p id="riego">riesgo</p>
+      </div>
+
+      <div class="tipoinversion">
+        <h3>Fondos de inversión</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem officiis autem similique dolores, natus odit totam velit aut mollitia expedita!</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Expedita, veritatis?</p>
+        <p id="riego">riesgo</p>
+      </div>
+
+      <div class="tipoinversion">
+        <h3>Ahorro programado</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem officiis autem similique dolores, natus odit totam velit aut mollitia expedita!</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Expedita, veritatis?</p>
+        <p id="riego">riesgo</p>
+      </div>
+    </div>
+
+    <div id="FAQ">
+      <h2>¿Cómo abrir una cuenta?</h2>
+      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vero, dolores!</p>
+      <h2>¿Cuánto tarda un crédito?</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id, aspernatur?</p>
+      <h2>¿Tiene costos de manejo?</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error, voluptate.</p>
+      <h2>¿Es seguro el banco?</h2>
+      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reiciendis, magni!</p>
     </div>
   </div>
 
+  <div>
+    <h1>Educación Financiera</h1>
+
+    <h2>Consejos de ahorro</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam sed incidunt adipisci laudantium facere ipsum reprehenderit illum earum exercitationem illo!</p>
+
+    <h2>Manejo de deudas</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam sed incidunt adipisci laudantium facere ipsum reprehenderit illum earum exercitationem illo!</p>
+
+    <h2>Inversión básica</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam sed incidunt adipisci laudantium facere ipsum reprehenderit illum earum exercitationem illo!</p>
+
+  </div>
+
   <footer>
-    <nav>
+    <h1>Banca Online</h1>
+    <h2>Dirección</h2>
+    <ul>
+      <li>(Redes sociales)</li>
+    </ul>
+    <div>
+      <div>
         <ul>
-          <li><a href="#">Historia del banco</a></li>
+          <li><a href="#">Términos y condiciones</a></li>
+          <li><a href="#">Política de privacidad</a></li>
+          <li><a href="#">Tratamiento de datos</a></li>
+          <li><a href="#">Regulación financiera</a></li>
+        </ul>
+      </div>
+
+      <div>
+        <ul>
           <li><a href="#">Misión</a></li>
           <li><a href="#">Visión</a></li>
           <li><a href="#">Valores</a></li>
+          <li><a href="#">Historia del banco</a></li>
         </ul>
-      </nav>
+      </div>
+    </div>
+
+    <p>Copyright &copy; 2026 Banca Online. Todos los derechos reservados.</p>
   </footer>
 
 </body>
