refactor(html): polish main HTML structure

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -26,11 +26,12 @@
 
     <div id="cuentas">
       <div class="cuenta">
+        <h1>Cuentas</h1>
         <h2>Cuenta de ahorros</h2>
         <p class="descripcion">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error velit magni id dolor ab iure magnam voluptatibus. Aperiam nisi, qui facilis numquam corporis quae dolores nesciunt quas. Et, repellat nostrum.</p>
         <p class="beneficios">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error velit magni id dolor ab iure magnam voluptatibus. Aperiam nisi, qui facilis numquam corporis quae dolores nesciunt quas. Et, repellat nostrum.</p>
         <p class="requisitos">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error velit magni id dolor ab iure magnam voluptatibus. Aperiam nisi, qui facilis numquam corporis quae dolores nesciunt quas. Et, repellat nostrum.</p>
-        <button><a href="#">Abrir Cuenta</a></button>
+        <a href="#" class="boton">Abrir Cuenta</a>
       </div>
 
       <div class="cuenta">
@@ -38,7 +39,7 @@
         <p class="descripcion">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error velit magni id dolor ab iure magnam voluptatibus. Aperiam nisi, qui facilis numquam corporis quae dolores nesciunt quas. Et, repellat nostrum.</p>
         <p class="beneficios">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error velit magni id dolor ab iure magnam voluptatibus. Aperiam nisi, qui facilis numquam corporis quae dolores nesciunt quas. Et, repellat nostrum.</p>
         <p class="requisitos">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error velit magni id dolor ab iure magnam voluptatibus. Aperiam nisi, qui facilis numquam corporis quae dolores nesciunt quas. Et, repellat nostrum.</p>
-        <button><a href="#">Abrir Cuenta</a></button>
+        <a href="#" class="boton">Abrir Cuenta</a>
       </div>
 
       <div class="cuenta">
@@ -46,71 +47,77 @@
         <p class="descripcion">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error velit magni id dolor ab iure magnam voluptatibus. Aperiam nisi, qui facilis numquam corporis quae dolores nesciunt quas. Et, repellat nostrum.</p>
         <p class="beneficios">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error velit magni id dolor ab iure magnam voluptatibus. Aperiam nisi, qui facilis numquam corporis quae dolores nesciunt quas. Et, repellat nostrum.</p>
         <p class="requisitos">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error velit magni id dolor ab iure magnam voluptatibus. Aperiam nisi, qui facilis numquam corporis quae dolores nesciunt quas. Et, repellat nostrum.</p>
-        <button>Abrir Cuenta</button>
+        <a href="#" class="boton">Abrir Cuenta</a>
       </div>
     </div>
 
     <div id="tarjetas">
-      <h2>Nuestras Tarjetas</h2>
-
-      <div id="tarjetastipo">
-        <h3>Tarjeta Debito</h3>
+      <h1>Nuestras Tarjetas</h1>
+      <div class="tarjetastipo">
+        <h2>Tarjeta Debito</h2>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellat omnis quod, amet aut fugit recusandae ab numquam provident. Ullam ducimus accusantium vel magni et tempore commodi sequi nisi, laudantium recusandae!</p>
-        <button id="botonTarjetas">Tarjetas Debito</button>
+        <a href="./pages/tarjetasdebito.html" class="boton">Tarjetas Débito</a>
       </div>
-      <div id="tarjetastipo">
-        <h3>Tarjeta Credito</h3>
+      <div class="tarjetastipo">
+        <h2>Tarjeta Credito</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In, quaerat fugit illo cumque hic alias cum id asperiores nihil amet, facere fugiat quidem molestiae necessitatibus consectetur vero labore quos quod.</p>
-        <button id="botonTarjetas">Tarjetas Credito</button>
+        <a href="./pages/tarjetasdebito.html" class="boton">Tarjetas Credito</a>
       </div>
     </div>
 
     <div id="prestamos">
-      <h2>Créditos y Préstamos</h2>
+      <h1>Créditos y Préstamos</h1>
 
       <div class="creditos">
         <h2>Crédito personal</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut blanditiis dolor ducimus dicta tempore perferendis incidunt tempora dolore neque excepturi!</p>
+        <a href="./pages/solicitarcredito.html" class="boton">Solicitar</a>
       </div>
 
       <div class="creditos">
         <h2>Crédito hipotecario</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut blanditiis dolor ducimus dicta tempore perferendis incidunt tempora dolore neque excepturi!</p>
+        <a href="./pages/solicitarcredito.html" class="boton">Solicitar</a>
       </div>
 
       <div class="creditos">
         <h2>Crédito vehicular</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut blanditiis dolor ducimus dicta tempore perferendis incidunt tempora dolore neque excepturi!</p>
+        <a href="./pages/solicitarcredito.html" class="boton">Solicitar</a>
       </div>
 
       <div class="creditos">
         <h2>Crédito estudiantil</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut blanditiis dolor ducimus dicta tempore perferendis incidunt tempora dolore neque excepturi!</p>
+        <a href="./pages/solicitarcredito.html" class="boton">Solicitar</a>
       </div>
     </div>
 
     <div id="inversiones">
-      <h2>Inversiones</h2>
+      <h1>Inversiones</h1>
 
       <div class="tipoinversion">
-        <h3>CDT</h3>
+        <h2>CDT</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem officiis autem similique dolores, natus odit totam velit aut mollitia expedita!</p>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Expedita, veritatis?</p>
-        <p id="riego">riesgo</p>
+        <p class="riego">riesgo</p>
+        <a href="./pages/inversiones.html" class="boton">Invierte</a>
       </div>
 
       <div class="tipoinversion">
-        <h3>Fondos de inversión</h3>
+        <h2>Fondos de inversión</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem officiis autem similique dolores, natus odit totam velit aut mollitia expedita!</p>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Expedita, veritatis?</p>
-        <p id="riego">riesgo</p>
+        <p class="riego">riesgo</p>
+        <a href="./pages/inversiones.html" class="boton">Invierte</a>
       </div>
 
       <div class="tipoinversion">
-        <h3>Ahorro programado</h3>
+        <h2>Ahorro programado</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem officiis autem similique dolores, natus odit totam velit aut mollitia expedita!</p>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Expedita, veritatis?</p>
-        <p id="riego">riesgo</p>
+        <p class="riego">riesgo</p>
+        <a href="./pages/inversiones.html" class="boton">Invierte</a>
       </div>
     </div>
 
