feat(pages): add legal and informational pages and interlink navigation

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Banca Online</title>
+  <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
 
@@ -28,25 +29,42 @@
       <div class="cuenta">
         <h1>Cuentas</h1>
         <h2>Cuenta de ahorros</h2>
-        <p class="descripcion">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error velit magni id dolor ab iure magnam voluptatibus. Aperiam nisi, qui facilis numquam corporis quae dolores nesciunt quas. Et, repellat nostrum.</p>
-        <p class="beneficios">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error velit magni id dolor ab iure magnam voluptatibus. Aperiam nisi, qui facilis numquam corporis quae dolores nesciunt quas. Et, repellat nostrum.</p>
-        <p class="requisitos">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error velit magni id dolor ab iure magnam voluptatibus. Aperiam nisi, qui facilis numquam corporis quae dolores nesciunt quas. Et, repellat nostrum.</p>
+        <p class="descripcion">Producto diseñado para guardar y administrar tu dinero de forma segura, permitiendo realizar depósitos, retiros y transferencias con facilidad desde canales digitales y físicos.</p>
+        <p class="beneficios">Rendimiento mensual sobre el saldo</p>
+        <p class="beneficios">Acceso a banca virtual y aplicación móvil</p>
+        <p class="beneficios">Retiros en cajeros automáticos</p>
+        <p class="beneficios">Control total de movimientos</p>
+        <span>Ideal para: personas que desean ahorrar y manejar su dinero de forma segura.</span>
+        <p class="requisitos">Documento de identidad vigente</p>
+        <p class="requisitos">Ser mayor de edad</p>
+        <p class="requisitos">Registro en la banca virtual</p>
         <a href="#" class="boton">Abrir Cuenta</a>
       </div>
 
       <div class="cuenta">
         <h2>Cuenta corriente</h2>
-        <p class="descripcion">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error velit magni id dolor ab iure magnam voluptatibus. Aperiam nisi, qui facilis numquam corporis quae dolores nesciunt quas. Et, repellat nostrum.</p>
-        <p class="beneficios">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error velit magni id dolor ab iure magnam voluptatibus. Aperiam nisi, qui facilis numquam corporis quae dolores nesciunt quas. Et, repellat nostrum.</p>
-        <p class="requisitos">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error velit magni id dolor ab iure magnam voluptatibus. Aperiam nisi, qui facilis numquam corporis quae dolores nesciunt quas. Et, repellat nostrum.</p>
+        <p class="descripcion">Cuenta orientada a clientes con alto volumen de transacciones, ideal para manejo de pagos frecuentes y operaciones empresariales.</p>
+        <p class="beneficios">Manejo de chequera</p>
+        <p class="beneficios">Cupo de sobregiro</p>
+        <p class="beneficios">Pagos y transferencias de alto monto</p>
+        <p class="beneficios">Atención preferencial</p>
+        <span>Ideal para: negocios y usuarios con alto movimiento financiero.</span>
+        <p class="requisitos">Documento de identidad</p>
+        <p class="requisitos">Ingresos comprobables</p>
+        <p class="requisitos">Aprobación crediticia</p>
         <a href="#" class="boton">Abrir Cuenta</a>
       </div>
 
       <div class="cuenta">
         <h2>Cuenta digital</h2>
-        <p class="descripcion">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error velit magni id dolor ab iure magnam voluptatibus. Aperiam nisi, qui facilis numquam corporis quae dolores nesciunt quas. Et, repellat nostrum.</p>
-        <p class="beneficios">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error velit magni id dolor ab iure magnam voluptatibus. Aperiam nisi, qui facilis numquam corporis quae dolores nesciunt quas. Et, repellat nostrum.</p>
-        <p class="requisitos">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error velit magni id dolor ab iure magnam voluptatibus. Aperiam nisi, qui facilis numquam corporis quae dolores nesciunt quas. Et, repellat nostrum.</p>
+        <p class="descripcion">uenta 100% digital que permite manejar tu dinero sin necesidad de acudir a una oficina física.</p>
+        <p class="beneficios">Apertura en línea</p>
+        <p class="beneficios">Sin cuota de manejo</p>
+        <p class="beneficios">Transferencias inmediatas</p>
+        <p class="beneficios">Tarjeta débito digital</p>
+        <p class="requisitos">Documento de identidad</p>
+        <p class="requisitos">Correo electrónico y número celular</p>
+        <p class="requisitos">Registro en la plataforma digital</p>
         <a href="#" class="boton">Abrir Cuenta</a>
       </div>
     </div>
@@ -55,12 +73,12 @@
       <h1>Nuestras Tarjetas</h1>
       <div class="tarjetastipo">
         <h2>Tarjeta Debito</h2>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellat omnis quod, amet aut fugit recusandae ab numquam provident. Ullam ducimus accusantium vel magni et tempore commodi sequi nisi, laudantium recusandae!</p>
+        <p>Tarjeta asociada directamente a tu cuenta bancaria que permite realizar pagos y retiros utilizando el saldo disponible.</p>
         <a href="./pages/tarjetasdebito.html" class="boton">Tarjetas Débito</a>
       </div>
       <div class="tarjetastipo">
         <h2>Tarjeta Credito</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In, quaerat fugit illo cumque hic alias cum id asperiores nihil amet, facere fugiat quidem molestiae necessitatibus consectetur vero labore quos quod.</p>
+        <p>Medio de pago que permite realizar compras y pagos financiados a una o varias cuotas, con beneficios adicionales y control desde la banca virtual.</p>
         <a href="./pages/tarjetasdebito.html" class="boton">Tarjetas Credito</a>
       </div>
     </div>
@@ -70,25 +88,25 @@
 
       <div class="creditos">
         <h2>Crédito personal</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut blanditiis dolor ducimus dicta tempore perferendis incidunt tempora dolore neque excepturi!</p>
+        <p>Financiación destinada a cubrir gastos personales como viajes, salud o proyectos individuales.</p>
         <a href="./pages/solicitarcredito.html" class="boton">Solicitar</a>
       </div>
 
       <div class="creditos">
         <h2>Crédito hipotecario</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut blanditiis dolor ducimus dicta tempore perferendis incidunt tempora dolore neque excepturi!</p>
+        <p>Crédito a largo plazo destinado a la compra, construcción o remodelación de vivienda.</p>
         <a href="./pages/solicitarcredito.html" class="boton">Solicitar</a>
       </div>
 
       <div class="creditos">
         <h2>Crédito vehicular</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut blanditiis dolor ducimus dicta tempore perferendis incidunt tempora dolore neque excepturi!</p>
+        <p>Financiación para la compra de vehículos nuevos o usados con plazos flexibles.</p>
         <a href="./pages/solicitarcredito.html" class="boton">Solicitar</a>
       </div>
 
       <div class="creditos">
         <h2>Crédito estudiantil</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut blanditiis dolor ducimus dicta tempore perferendis incidunt tempora dolore neque excepturi!</p>
+        <p>Apoyo financiero para estudios técnicos, universitarios o de posgrado, con tasas preferenciales.</p>
         <a href="./pages/solicitarcredito.html" class="boton">Solicitar</a>
       </div>
     </div>
@@ -98,38 +116,35 @@
 
       <div class="tipoinversion">
         <h2>CDT</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem officiis autem similique dolores, natus odit totam velit aut mollitia expedita!</p>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Expedita, veritatis?</p>
-        <p class="riego">riesgo</p>
+        <p>Producto de inversión donde el cliente deposita un monto de dinero por un plazo definido, recibiendo una rentabilidad fija.</p>
+        <p class="riego">Bajo riesgo, ya que la rentabilidad está garantizada y el capital no se ve afectado por variaciones del mercado.</p>
         <a href="./pages/inversiones.html" class="boton">Invierte</a>
       </div>
 
       <div class="tipoinversion">
         <h2>Fondos de inversión</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem officiis autem similique dolores, natus odit totam velit aut mollitia expedita!</p>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Expedita, veritatis?</p>
-        <p class="riego">riesgo</p>
+        <p>Inversión colectiva administrada por profesionales que busca generar rentabilidad mediante la diversificación.</p>
+        <p class="riego">Riesgo medio o alto, dependiendo del tipo de fondo, ya que el rendimiento puede variar según el comportamiento del mercado.</p>
         <a href="./pages/inversiones.html" class="boton">Invierte</a>
       </div>
 
       <div class="tipoinversion">
         <h2>Ahorro programado</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem officiis autem similique dolores, natus odit totam velit aut mollitia expedita!</p>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Expedita, veritatis?</p>
-        <p class="riego">riesgo</p>
+        <p>Plan de ahorro periódico que permite alcanzar metas financieras a mediano o largo plazo.</p>
+        <p class="riego">Riesgo bajo, ya que no depende de la volatilidad del mercado y se basa en aportes constantes.</p>
         <a href="./pages/inversiones.html" class="boton">Invierte</a>
       </div>
     </div>
 
     <div id="FAQ">
       <h2>¿Cómo abrir una cuenta?</h2>
-      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vero, dolores!</p>
+      <p>La apertura puede realizarse en línea o en una oficina del banco, presentando el documento de identidad y completando el registro.</p>
       <h2>¿Cuánto tarda un crédito?</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id, aspernatur?</p>
+      <p>El proceso de aprobación puede tardar entre 1 y 5 días hábiles, dependiendo del tipo de crédito.</p>
       <h2>¿Tiene costos de manejo?</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error, voluptate.</p>
+      <p>Algunos productos pueden tener cuota de manejo, mientras que las cuentas digitales no generan este costo.</p>
       <h2>¿Es seguro el banco?</h2>
-      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reiciendis, magni!</p>
+      <p>Sí, el banco cuenta con sistemas de seguridad avanzados y cumple con las normas de protección financiera y de datos.</p>
     </div>
   </div>
 
@@ -137,13 +152,13 @@
     <h1>Educación Financiera</h1>
 
     <h2>Consejos de ahorro</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam sed incidunt adipisci laudantium facere ipsum reprehenderit illum earum exercitationem illo!</p>
+    <p>Establece un monto fijo de ahorro mensual y evita retirar ese dinero para gastos no necesarios.</p>
 
     <h2>Manejo de deudas</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam sed incidunt adipisci laudantium facere ipsum reprehenderit illum earum exercitationem illo!</p>
+    <p>Mantén tus deudas bajo control, paga a tiempo y evita adquirir créditos que superen tu capacidad de pago.</p>
 
     <h2>Inversión básica</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam sed incidunt adipisci laudantium facere ipsum reprehenderit illum earum exercitationem illo!</p>
+    <p>Antes de invertir, define tu objetivo financiero y el nivel de riesgo que estás dispuesto a asumir.</p>
 
   </div>
 
@@ -156,19 +171,19 @@
     <div>
       <div>
         <ul>
-          <li><a href="#">Términos y condiciones</a></li>
-          <li><a href="#">Política de privacidad</a></li>
-          <li><a href="#">Tratamiento de datos</a></li>
-          <li><a href="#">Regulación financiera</a></li>
+          <li><a href="./pages/terminos.html">Términos y condiciones</a></li>
+          <li><a href="./pages/politica-privacidad.html">Política de privacidad</a></li>
+          <li><a href="./pages/tratamiento-datos.html">Tratamiento de datos</a></li>
+          <li><a href="./pages/regulacion.html">Regulación financiera</a></li>
         </ul>
       </div>
 
       <div>
         <ul>
-          <li><a href="#">Misión</a></li>
-          <li><a href="#">Visión</a></li>
-          <li><a href="#">Valores</a></li>
-          <li><a href="#">Historia del banco</a></li>
+          <li><a href="./pages/sobrebanca.html">Misión</a></li>
+          <li><a href="./pages/sobrebanca.html">Visión</a></li>
+          <li><a href="./pages/sobrebanca.html">Valores</a></li>
+          <li><a href="./pages/sobrebanca.html">Historia del banco</a></li>
         </ul>
       </div>
     </div>
