fix(routing): correct page redirections

--- a/pages/politica-privacidad.html
+++ b/pages/politica-privacidad.html
@@ -100,10 +100,10 @@
 
       <div>
         <ul>
-          <li><a href="#">Misión</a></li>
-          <li><a href="#">Visión</a></li>
-          <li><a href="#">Valores</a></li>
-          <li><a href="#">Historia del banco</a></li>
+          <li><a href="./sobrebanca.html">Misión</a></li>
+          <li><a href="./sobrebanca.html">Visión</a></li>
+          <li><a href="./sobrebanca.html">Valores</a></li>
+          <li><a href="./sobrebanca.html">Historia del banco</a></li>
         </ul>
       </div>
     </div>
