--- a/pages/terminos.html
+++ b/pages/terminos.html
@@ -84,18 +84,18 @@
       <div>
         <ul>
           <li><a href="#">Términos y condiciones</a></li>
-          <li><a href="./pages/politica-privacidad.html">Política de privacidad</a></li>
-          <li><a href="./pages/tratamiento-datos.html">Tratamiento de datos</a></li>
-          <li><a href="./pages/regulacion.html">Regulación financiera</a></li>
+          <li><a href="./politica-privacidad.html">Política de privacidad</a></li>
+          <li><a href="./tratamiento-datos.html">Tratamiento de datos</a></li>
+          <li><a href="./regulacion.html">Regulación financiera</a></li>
         </ul>
       </div>
 
       <div>
         <ul>
-          <li><a href="#">Misión</a></li>
-          <li><a href="#">Visión</a></li>
-          <li><a href="#">Valores</a></li>
-          <li><a href="#">Historia del banco</a></li>
+          <li><a href="./sobrebanca.html">Misión</a></li>
+          <li><a href="./sobrebanca.html">Visión</a></li>
+          <li><a href="./sobrebanca.html">Valores</a></li>
+          <li><a href="./sobrebanca.html">Historia del banco</a></li>
         </ul>
       </div>
     </div>
